--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
       <a href="https://twitter.com/" target="_blank" aria-label="Twitter"><svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none"><path d="M22.46 5.924c-.793.352-1.645.59-2.54.697a4.48 4.48 0 0 0 1.965-2.475 8.94 8.94 0 0 1-2.828 1.082A4.48 4.48 0 0 0 16.11 4c-2.482 0-4.495 2.013-4.495 4.495 0 .352.04.695.116 1.022C7.728 9.37 4.1 7.555 1.67 4.905a4.48 4.48 0 0 0-.608 2.262c0 1.56.795 2.936 2.004 3.744a4.48 4.48 0 0 1-2.037-.563v.057c0 2.18 1.55 4.002 3.604 4.417a4.49 4.49 0 0 1-2.03.077c.573 1.788 2.24 3.09 4.213 3.125A8.99 8.99 0 0 1 2 19.54a12.7 12.7 0 0 0 6.88 2.017c8.26 0 12.78-6.84 12.78-12.78 0-.195-.004-.39-.013-.583A9.14 9.14 0 0 0 24 4.59a8.98 8.98 0 0 1-2.54.697z" fill="currentColor"/></svg></a>
       <a href="mailto:saisantoshc@gmail.com" aria-label="Email"><svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.293 6.293a1 1 0 0 0 1.414 0L20 10.01V20H4z" fill="currentColor"/></svg></a>
     </div>
-    <div>
-      &copy; 2024 Sai Santosh. All rights reserved.
+      <div>
+      &copy; <span id="year"></span> Sai Santosh. All rights reserved.
     </div>
+    <script src="script.js"></script>
+    <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
   </footer>
   <script src="script.js"></script>
 </body>
