--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <nav>
-    <a href="#" class="nav-logo">Sai Santosh</a>
-    <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
-    <div class="nav-links">
-      <a href="#about">About</a>
-      <a href="#work-experience">Work Experience</a>
-      <a href="#tools">Tools</a>
-      <a href="#certifications">Certifications</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+  <nav class="navbar">
+    <div class="nav-content">
+      <span class="nav-logo">Sai Santosh</span>
+      <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation">
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+      </label>
+      <ul class="nav-links">
+        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#work-experience" class="nav-link">Work Experience</a></li>
+        <li><a href="#tools" class="nav-link">Tools</a></li>
+        <li><a href="#certifications" class="nav-link">Certifications</a></li>
+        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#contact" class="nav-link">Contact</a></li>
+      </ul>
     </div>
   </nav>
 
