--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sai Santosh | Portfolio</title>
+  <title>Sai Santosh Chirag | Portfolio</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <nav class="navbar">
     <div class="nav-content">
-      <span class="nav-logo">Sai Santosh</span>
+      <span class="nav-logo">Sai Santosh Chirag</span>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation">
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
@@ -26,7 +26,7 @@
   </nav>
 
   <section class="hero" id="hero">
-    <h1>Hi, I'm Sai Santosh</h1>
+    <h1>Hi, I'm Sai Santosh Chirag</h1>
     <p>I’m a passionate data analyst and full-stack developer transforming complex data into actionable insights and seamless digital experiences. Let’s build something impactful together.</p>
     <a href="#projects"><button class="cta">View Projects</button></a>
   </section>
