fix styling and look

--- a/index.html
+++ b/index.html
@@ -46,56 +46,26 @@
     </div>
   </section>
 
-  <section class="work-experience-section" id="work-experience">
-    <h2 class="section-title fade-in">Work Experience</h2>
-    <div class="work-experience-list">
-      <div class="work-card fade-in">
-        <h4>Data Analyst, Insurigo <span>(Sept 2024 - June 2025)</span></h4>
-        <ul>
-          <li>Tableau dashboards, SQL analytics, Excel automation for insurance metrics and reporting.</li>
-        </ul>
-      </div>
-      <div class="work-card fade-in">
-        <h4>Senior Software Engineer, Insurigo <span>(July 2021 - Aug 2023)</span></h4>
-        <ul>
-          <li>REST APIs (Python/Django), MySQL/PostgreSQL, CI/CD, React, MongoDB, Azure DevOps.</li>
-        </ul>
-      </div>
-      <div class="work-card fade-in">
-        <h4>Full Stack Developer, Apollo Telehealth <span>(Jan 2021 – Jun 2021)</span></h4>
-        <ul>
-          <li>React, TypeScript, Node.js, Express, Angular, MongoDB, large-scale data migration.</li>
-        </ul>
-      </div>
-      <div class="work-card fade-in">
-        <h4>Machine Learning Engineer, Egen AI <span>(Jan 2020 - Jan 2021)</span></h4>
-        <ul>
-          <li>Machine learning solutions (details on request).</li>
-        </ul>
-      </div>
+  </section>
+
+  <section class="experience-section" id="experience">
+    <h2 class="section-title">Experience</h2>
+    <div class="timeline" id="experience-timeline">
+      <!-- Experience entries will be injected here by JS -->
     </div>
   </section>
 
   <section class="tools-section" id="tools">
-    <h2 class="section-title fade-in">Tools & Technologies</h2>
-    <div class="tools-list fade-in">
-      <ul>
-        <li>Python, Django, Flask, Node.js, Express, React, Angular</li>
-        <li>SQL, MySQL, PostgreSQL, MongoDB</li>
-        <li>Tableau, Excel, Power BI</li>
-        <li>Azure, Azure DevOps, Git, Stripe API</li>
-        <li>OpenCV, Machine Learning, NLP</li>
-      </ul>
+    <h2 class="section-title">Tools & Technologies</h2>
+    <div class="timeline" id="tools-timeline">
+      <!-- Tool entries will be injected here by JS -->
     </div>
   </section>
 
   <section class="certifications-section" id="certifications">
-    <h2 class="section-title fade-in">Certifications</h2>
-    <div class="certifications-list fade-in">
-      <ul>
-        <li>Microsoft Azure Fundamentals</li>
-        <li>Graduate Certification – UTD Applied Machine Learning</li>
-      </ul>
+    <h2 class="section-title">Certifications</h2>
+    <div class="timeline" id="certifications-timeline">
+      <!-- Certification entries will be injected here by JS -->
     </div>
   </section>
 
@@ -144,7 +114,6 @@
         <a href="https://twitter.com/" target="_blank" aria-label="Twitter">Twitter</a>
       </p>
     </div>
-  </section>
 
   <footer>
     <div class="footer-social">
@@ -165,6 +134,15 @@
     </script>
   </footer>
 
+  <script src="script.js"></script>
+</body>
+</html>
+    </script>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
   <script src="script.js"></script>
 </body>
 </html>
