--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </label>
       <ul class="nav-links">
         <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#work-experience" class="nav-link">Work Experience</a></li>
+        <li><a href="#experience" class="nav-link">Work Experience</a></li>
         <li><a href="#tools" class="nav-link">Tools</a></li>
         <li><a href="#certifications" class="nav-link">Certifications</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
@@ -134,15 +134,10 @@
     </script>
   </footer>
 
-  <script src="script.js"></script>
-</body>
-</html>
-    </script>
-  </footer>
+  <!-- Theme toggle button (optional, for demo) -->
+  <button id="theme-toggle" class="btn" style="position:fixed;bottom:2rem;right:2rem;z-index:200;">Toggle Theme</button>
 
   <script src="script.js"></script>
 </body>
 </html>
-  <script src="script.js"></script>
-</body>
-</html>
+
