--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
   </section>
 
   <section class="about" id="about">
+    <div class="about-photo-wrapper">
+      <img src="https://placehold.co/140x140?text=Photo" alt="Sai Santosh Chirag photo" class="about-photo" />
+    </div>
     <div class="about-block fade-in">
       <h3>Data Analytics & AI</h3>
       <p>Leveraging business analytics, machine learning, and advanced data visualization to turn complex data into clear, actionable insights for smarter decision-making.</p>
@@ -71,9 +74,16 @@
 
   <section class="projects" id="projects">
     <div class="project-card fade-in">
-      <img src="images/52bd8796-72b8-44fa-8c93-fb5aae73276e.png" alt="Risk Factor Analysis"/>
-      <h4>Risk Factor Analysis</h4>
-      <p>Built a large-scale risk analysis system using Hadoop, Spark, PostgreSQL, and Tableau, enabling data-driven safety policy decisions with interactive dashboards.</p>
+      <img src="images/create-personalized-fitness-routine_507704-22764.jpg" alt="Fitplanet – Personalized Fitness & E-Commerce Platform"/>
+      <h4>Fitplanet – Personalized Fitness & E-Commerce Platform</h4>
+      <p>Developed a fitness-focused web application that generates customized muscle workout plans based on user inputs like equipment availability, target muscles, and preferences. Integrated an e-commerce system for supplements and equipment, with secure payments via an in-built wallet and Stripe.</p>
+      <a href="https://github.com/saisantoshchirag/Fit-Planet" target="_blank">View Project</a>
+    </div>
+    <div class="project-card fade-in">
+      <img src="images/2afe516f-2672-4f0c-9faf-9b1e8fd76282.png" alt="Air Quality Regression & Time Series Analysis"/>
+      <h4>Air Quality Regression & Time Series Analysis</h4>
+      <p>Performed regression and time series analysis on UCI’s Air Quality dataset using statistical methods and machine learning models like Linear and Random Forest Regression. Implemented preprocessing, stationarity tests, PCA, and factor analysis to model and predict air quality indicators with high accuracy.</p>
+      <a href="https://github.com/saisantoshchirag/Air-Quality-UCI" target="_blank">View Project</a>
     </div>
     <div class="project-card fade-in">
       <img src="images\2.png" alt="Football Field Detection"/>
@@ -100,42 +110,49 @@
       <a href="https://github.com/bradison18/Farmup" target="_blank">View Project</a>
     </div>
   </section>
-
-  <section class="contact-section" id="contact">
-    <h2>Contact Me</h2>
-    <div class="contact-info">
-      <p>
-        <strong>Email:</strong>
-        <a href="mailto:santosh.265559@gmail.com">santosh.265559@gmail.com</a>
-      </p>
-      <p>
-        <strong>Socials:</strong>
-        <a href="https://github.com/saisantoshchirag" target="_blank" aria-label="GitHub">GitHub</a> |
-        <a href="https://twitter.com/" target="_blank" aria-label="Twitter">Twitter</a>
-      </p>
-    </div>
-
   <footer>
-    <div class="footer-social">
-      <a href="https://github.com/saisantoshchirag" target="_blank" aria-label="GitHub">
-        <!-- GitHub SVG Icon -->
-        <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none"><path d="M12 2C6.477 2 2 6.484 2 12.021c0 4.428 2.865 8.184 6.839 9.504.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.342-3.369-1.342-.454-1.154-1.11-1.462-1.11-1.462-.908-.62.069-.608.069-.608 1.004.07 1.532 1.032 1.532 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.221-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.987 1.029-2.686-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.025A9.564 9.564 0 0 1 12 6.844c.85.004 1.705.115 2.504.337 1.909-1.295 2.748-1.025 2.748-1.025.546 1.378.202 2.397.1 2.65.64.699 1.028 1.593 1.028 2.686 0 3.847-2.337 4.695-4.566 4.944.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.749 0 .267.18.579.688.481C19.138 20.2 22 16.447 22 12.021 22 6.484 17.523 2 12 2Z" fill="currentColor"/></svg>
-      </a>
-      <a href="mailto:santosh.265559@gmail.com" aria-label="Email">
-        <!-- Email SVG Icon -->
-        <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.293 6.293a1 1 0 0 0 1.414 0L20 10.01V20H4z" fill="currentColor"/></svg>
-      </a>
-    </div>
-    <div>
-      &copy; <span id="year"></span> Sai Santosh. All rights reserved.
-    </div>
-    <script>
-      document.getElementById('year').textContent = new Date().getFullYear();
-    </script>
+    <section class="contact-section" id="contact">
+      <h2>Contact Me</h2>
+      <div class="contact-info">
+        <div class="footer-social">
+          <a href="https://github.com/saisantoshchirag" target="_blank" aria-label="GitHub">
+            <!-- GitHub SVG Icon (original, larger) -->
+            <svg width="2.4em" height="2.4em" viewBox="0 0 24 24" fill="none"><path d="M12 2C6.477 2 2 6.484 2 12.021c0 4.428 2.865 8.184 6.839 9.504.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.342-3.369-1.342-.454-1.154-1.11-1.462-1.11-1.462-.908-.62.069-.608.069-.608 1.004.07 1.532 1.032 1.532 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.221-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.987 1.029-2.686-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.025A9.564 9.564 0 0 1 12 6.844c.85.004 1.705.115 2.504.337 1.909-1.295 2.748-1.025 2.748-1.025.546 1.378.202 2.397.1 2.65.64.699 1.028 1.593 1.028 2.686 0 3.847-2.337 4.695-4.566 4.944.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.749 0 .267.18.579.688.481C19.138 20.2 22 16.447 22 12.021 22 6.484 17.523 2 12 2Z" fill="currentColor"/></svg>
+          </a>
+          <a href="https://www.linkedin.com/in/saisantoshchirag/" target="_blank" aria-label="LinkedIn">
+            <!-- LinkedIn SVG Icon (original, larger) -->
+            <svg width="2.4em" height="2.4em" viewBox="0 0 24 24" fill="none">
+              <path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm15.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.59v4.72z" fill="currentColor"/>
+            </svg>
+          </a>
+          <a href="mailto:santosh.265559@gmail.com" aria-label="Email">
+            <!-- Email SVG Icon (original, larger) -->
+            <svg width="2.4em" height="2.4em" viewBox="0 0 24 24" fill="none"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.293 6.293a1 1 0 0 0 1.414 0L20 10.01V20H4z" fill="currentColor"/></svg>
+          </a>
+        </div>
+      </div>
+      <div>
+        &copy; <span id="year"></span> Sai Santosh Chirag. All rights reserved.
+      </div>
+      <script>
+        document.getElementById('year').textContent = new Date().getFullYear();
+      </script>
+    </section>
   </footer>
 
   <!-- Theme toggle button (optional, for demo) -->
   <button id="theme-toggle" class="btn" style="position:fixed;bottom:2rem;right:2rem;z-index:200;">Toggle Theme</button>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
+  <script src="script.js"></script>
+</body>
+</html>
+  <script src="script.js"></script>
+</body>
+</html>
 
   <script src="script.js"></script>
 </body>
